--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-scripts",
-  "version": "1.1.1",
-  "description": "Configuration and scripts for Create React App.",
+  "name": "test-cra",
+  "version": "0.0.7",
+  "description": "SSR with create react app",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
   "engines": {
@@ -21,6 +21,12 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "express": "^4.16.3",
+    "ignore-styles": "^5.0.1",
+    "babel-plugin-named-asset-import": "^0.0.0",
+    "css-modules-require-hook": "^4.2.3",
+    "morgan": "^1.9.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -42,15 +48,25 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "svg-inline-loader": "0.8.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "postcss-import": "^11.1.0",
+    "postcss-nested": "^3.0.0", 
+    "postcss-cssnext": "^3.1.0",   
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.0",
+    "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",    
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
