--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-cra",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "SSR with create react app",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
@@ -48,7 +48,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "svg-inline-loader": "0.8.0",
+    "svg-react-loader": "^0.4.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
