--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
+    "accept-language": "^3.0.18",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -73,11 +74,16 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "platform.shared.nodelogger": "^3.0.2",
+    "platform.shared.resilient-eureka": "^1.0.21" 
   },
   "devDependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "better-npm-run": "^0.1.0",
+    "nodemon": "^1.17.2"
+    
   },
   "optionalDependencies": {
     "fsevents": "^1.1.3"
