--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-cra",
-  "version": "0.0.12",
+  "version": "0.0.17",
   "description": "SSR with create react app",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
@@ -76,14 +76,13 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3",
     "platform.shared.nodelogger": "^3.0.2",
-    "platform.shared.resilient-eureka": "^1.0.21" 
+    "platform.shared.resilient-eureka": "^1.0.21",
+    "better-npm-run": "^0.1.0",
+    "nodemon": "^1.17.2"
   },
   "devDependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "better-npm-run": "^0.1.0",
-    "nodemon": "^1.17.2"
-    
+    "react-dom": "^16.0.0"
   },
   "optionalDependencies": {
     "fsevents": "^1.1.3"
