--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "test-cra",
-  "version": "0.0.17",
+  "name": "eis-create-react-app",
+  "version": "0.0.3",
   "description": "SSR with create react app",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
