--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eis-create-react-app",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "SSR with create react app",
   "repository": "facebookincubator/create-react-app",
   "license": "MIT",
@@ -65,6 +65,8 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-intl": "^2.4.0",
+    "react-ref-extensions": "^2.1.1",    
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
