--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -38,13 +38,6 @@
     "css-modules-require-hook": "^4.2.3",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
@@ -66,7 +59,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-intl": "^2.4.0",
-    "react-ref-extensions": "^2.1.1",    
+    "react-ref-extensions": "^2.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.19.0",
@@ -80,7 +73,15 @@
     "platform.shared.nodelogger": "^3.0.2",
     "platform.shared.resilient-eureka": "^1.0.21",
     "better-npm-run": "^0.1.0",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.1"
   },
   "devDependencies": {
     "react": "^16.0.0",
