--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -76,7 +76,7 @@
     "nodemon": "^1.17.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-jsx-a11y": "^5.x",
     "eslint-plugin-react": "^7.7.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
